# auth_service

./: LICENSE  README.md  db.py  notes.txt  pyproject.toml  schema.sql
app/: main.py
app/controllers/: tenants_controller.py
app/db/: connection.py
app/models/: tenants_model.py  users_model.py
app/repositories/: tenants_repository.py
app/routes/v1/: tenants.py  users.py
app/services/: tenants_services.py
app/utils/: enums.py  helpers.py  logger.py
